UN-671 Add new template for Subscription&GiftCart

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,4 +1,4 @@
-{% comment %}ly_liquid_scripts_begin{% endcomment %}{%- capture ly_liquid_content -%}{% comment %}ly_liquid_scripts_end{% endcomment %}
+{% comment %}ly_liquid_scripts_begin{% endcomment %}{% capture ly_liquid_content %}{% comment %}ly_liquid_scripts_end{% endcomment %}
 <!doctype html>
 <!--[if IE 9]> <html class="ie9 no-js" lang="{{ shop.locale }}"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js" lang="{{ shop.locale }}"> <!--<![endif]-->
