--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -20,22 +20,42 @@
   {% if section.settings.buy_it_now_action == 'direct_to_cart' %}var buyitnowaction = true;{% else %}var buyitnowaction = false;{% endif %}{% if section.settings.enable_related_upsell %}var relatedupsellenable = true;{% else %}var relatedupsellenable = false;{% endif %}{% if section.settings.buy_it_now_action == 'thank_you_message' %}var thankmsg = true;{% else %}var thankmsg = false;{% endif %}{% if section.settings.buy_it_now_action == 'direct_to_checkout' %}var drchkout = true;{% else %}var drchkout = false;{% endif %}
   {% if section.settings.enable_sticky %}var eblstcky = true;{% else %}var eblstcky = false;{% endif %}{% if section.settings.enable_payment_button %}var ebl_pay_but = true;var addToCartBtnLabel_1 = "{{ 'products.dynamic_checkout_buttons.add_to_cart_text_when_dynamic_checkout_buttons_enable' | t }}";{% else %}var ebl_pay_but = false;var addToCartBtnLabel_1 = "{{ 'products.product.add_to_cart' | t }}";{% endif %}{% if section.settings.visitor_counter_enable %}var visitorcountr = true;{% else %}var visitorcountr = false;{% endif %}
 </script>
+
 <div class="product-template__container product-{{ product.id }} page-width" itemscope itemtype="http://schema.org/Product" id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true"> 
 
   <meta itemprop="name" content="{{ product.title }}">
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
   <meta itemprop="image" content="{{ product.featured_image.src | img_url: '800x' }}">
   <meta itemprop="productID" content="{{product.id }}">
- 
-  
-  {% comment %}
-  Get first variant, or deep linked one
-  {% endcomment %}
-  {%- assign current_variant = product.selected_or_first_available_variant -%}
+  {%- liquid
 
-  {%- assign product_image_zoom_size = '1024x1024' -%}
-  {%- assign product_image_scale = '2' -%}
-  {%- assign enable_zoom = section.settings.enable_zoom -%}
+    assign current_variant = product.selected_or_first_available_variant
+
+      for item in cart.items
+        if item.product.type == 'Puzzle'
+          assign puzle_discount = puzle_discount | plus: item.quantity
+        endif
+      endfor
+
+      if customer
+        for tag in customer.tags
+          if tag == 'Subscription membership' 
+            assign member_discount = true
+          endif
+        endfor
+      endif
+      if member_discount == true and product.type == 'Puzzle'
+        assign current_variant_price = current_variant.price | times: 0.75
+      elsif puzle_discount > 2 and product.type == 'Puzzle'
+        assign current_variant_price = current_variant.price | times: 0.9
+      else
+        assign current_variant_price = current_variant.price
+      endif
+
+    assign product_image_zoom_size = '1024x1024'
+    assign product_image_scale = '2'
+    assign enable_zoom = section.settings.enable_zoom 
+  -%}
 
   <div class="grid product-single">
     <div class="grid__item product-single__photos medium-up--one-half">
@@ -303,37 +323,47 @@
           <link itemprop="availability" href="http://schema.org/{% if product.available %}InStock{% else %}OutOfStock{% endif %}">
 
            <p class="product-single__price product-single__price-{{ section.id }}{% unless current_variant.available %} product-price--sold-out{% endunless %}">
-            {% if current_variant.compare_at_price > current_variant.price %}
+            {% if current_variant.compare_at_price > current_variant_price %}
             <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
             <s id="ComparePrice-{{ section.id }}">{{ current_variant.compare_at_price | money }}</s>
             <span class="product-price__price product-price__price-{{ section.id }} product-price__sale product-price__sale--single">
               <span id="ProductPrice-{{ section.id }}"
-                    itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
-                {{ current_variant.price | money	 }}
+                    itemprop="price" content="{{ current_variant_price | divided_by: 100.00 }}">
+                {{ current_variant_price | money	 }}
               </span>
+              {%comment%}
+              {%- if customer -%}
+                {% for tag in customer.tags %}
+                  {%- if tag == 'Subscription membership' -%}
+                    <span id="ProductPrice-withdiscount">
+                      {{ current_variant_price| times: 0.75 | money	 }}
+                    </span>
+                  {%- endif -%}
+                {% endfor %}
+              {%- endif -%}
+              {%endcomment%}
               {% if section.settings.show_saved_amount %}
               <!-- Dscount price in percentage  -->
               <span class="save_discount_pro">
-              {% if current_variant.compare_at_price > current_variant.price %}
+              {% if current_variant.compare_at_price > current_variant_price %}
                 {% if settings.show_discount_amount == 'percent_save' %}
                 <span class="per_discount">
-                
                   {% assign money_pro_format = shop.money_format | strip_html | json %}
              
                   {% if money_pro_format contains "{{amount_no_decimals}}" or money_pro_format contains "{{amount_no_decimals_with_comma_separator}}" %}
-                  {{ current_variant.compare_at_price  | minus: current_variant.price  | times: 100.0 | divided_by: current_variant.compare_at_price | times: 100 | money_without_currency | replace:",","." | replace: '.0', '' }}{{ 'products.product.on_save' | t }}
+                    {{ current_variant.compare_at_price  | minus: current_variant_price  | times: 100.0 | divided_by: current_variant.compare_at_price | times: 100 | money_without_currency | replace:",","." | replace: '.0', '' }}{{ 'products.product.on_save' | t }}
                   {% elsif money_pro_format contains "{{amount_with_comma_separator}}" %}
-                  {{ current_variant.compare_at_price  | minus: current_variant.price  | times: 100.0 | divided_by: current_variant.compare_at_price | money_without_currency | replace:",","."  | times: 100 | replace: '.0', '' }}{{ 'products.product.on_save' | t }}
-				  {% else %}                  
-                  {{ current_variant.compare_at_price  | minus: current_variant.price  | times: 100.0 | divided_by: current_variant.compare_at_price  | money_without_currency | times: 100 | replace: '.0', ''}}{{ 'products.product.on_save' | t }}
+                    {{ current_variant.compare_at_price  | minus: current_variant_price  | times: 100.0 | divided_by: current_variant.compare_at_price | money_without_currency | replace:",","."  | times: 100 | replace: '.0', '' }}{{ 'products.product.on_save' | t }}
+				          {% else %}                  
+                    {{ current_variant.compare_at_price  | minus: current_variant_price  | times: 100.0 | divided_by: current_variant.compare_at_price  | money_without_currency | times: 100 | replace: '.0', ''}}{{ 'products.product.on_save' | t }}
                   {% endif %}
-                  </span>
+                </span>
                 <!-- Dscount price in percentage  -->
                 {% else %}
-                <span class="sale-tag salePrice large"> 
-                  {% assign sale = current_variant.compare_at_price | minus:  current_variant.price |  money %}
-                  {{ 'products.product.on_save_like_price' | t }} {{sale}}
-                </span>
+                  <span class="sale-tag salePrice large"> 
+                    {% assign sale = current_variant.compare_at_price | minus:  current_variant_price |  money %}
+                    {{ 'products.product.on_save_like_price' | t }} {{sale}}
+                  </span>
                 {% endif %}
               {% endif %}
               </span>
@@ -344,8 +374,8 @@
             <s id="ComparePrice-{{ section.id }}" class="hide">{{ current_variant.compare_at_price | money }}</s>
             <span class="product-price__price product-price__price-{{ section.id }}">
               <span id="ProductPrice-{{ section.id }}"
-                    itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
-                {{ current_variant.price | money }}
+                    itemprop="price" content="{{ current_variant_price | divided_by: 100.00 }}">
+                {{ current_variant_price | money }}
               </span>
               {% if section.settings.show_saved_amount %}
               <span class="save_discount_pro hide">
@@ -355,13 +385,7 @@
             </span>
             {% endif %}
           </p>
-          {% comment %}
-          {% if current_variant.price != 0 %}
-          {% else %}
-          <p class="free_itm">
-            {{ 'collections.tag.free_text' | t }}</p>
-          {% endif %}
-          {% endcomment %}
+
           {% if section.settings.product_review  %}
           <span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>
           {% endif %}
@@ -420,7 +444,6 @@
              }
              {% endcomment %}
           </script>
-          
           
           {%- capture "form_classes" -%}
           product-form product-form-{{ section.id }}{% unless section.settings.show_variant_labels %} product-form--hide-variant-labels{% endunless %}{% if section.settings.enable_payment_button and product.has_only_default_variant%} product-form--payment-button-no-variants{% endif %}
@@ -608,7 +631,7 @@
           {% endif  %}
 
 
-          {% assign price_var1=current_variant.price | withoutmoney %}  
+          {% assign price_var1=current_variant_price | withoutmoney %}  
           <div id="AddToCartForm1" class="product-form product-form-{{ section.id }}{% unless section.settings.show_variant_labels %} product-form--hide-variant-labels{% endunless %} stiky_form{% if price_var1 == 0 %} zerocost_from_box {% endif %}" data-section="{{ section.id }}" >
             <div id="mst-stiky-box" class="mst-stiky-div">
               {% if section.settings.enable_timer_stg_on == 'enable_timer_stg_on' %}  
@@ -623,7 +646,7 @@
               {% endfor %}
               {% endif %}
               
-              {% if current_variant.compare_at_price > current_variant.price %}
+              {% if current_variant.compare_at_price > current_variant_price %}
               <div class="price-lable {{tg }}">{{ 'products.product.sticky_timer_text' | t }} 
                 {% include 'sticky_timer_mobile'%}
               </div>
