--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -64,7 +64,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
         <input id="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}" type="radio" ga-data="{{size_count}}" name="option-{{ option_index }}" value="{{ value | escape }}"{% if forloop.first %}{% unless section.settings.enable_default_variant %} checked{% endunless %}{% endif %} {% unless variant.available %}disabled{% endunless %} />
         {% if is_color and section.settings.swatch_option == 'with_background' %}
           <label for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}" style="background-color: {{ value | split: ' ' | last | handle }}; background-image: url({% comment %}ly_asset_replace_for_[ value | handle | append: '.' | append: file_extension | asset_url ]_begin{% endcomment %}{% assign ly_asset = value | handle | append: '.' | append: file_extension %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %})">
-            <img class="crossed-out" src="{% comment %}ly_asset_replace_for_[ 'soldout.png' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
+            <img class="crossed-out" src="{% comment %}ly_asset_replace_for_[ 'soldout-1.png' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'soldout-1.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
           </label>
         {%- else -%}
         <label style="height: 100% !important;display: flex;flex-wrap: nowrap;flex-direction: row;align-items: center;justify-content: space-around;align-content: center;" for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}">
@@ -110,12 +110,13 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
             <span class="sw_val">{{ value | split: '—' | last }}</span>
           </div>
       </div>
-          <img class="crossed-out" src="{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
+      
         </label>
+        <span class="crossed-out">out of stock</span>
         {%- else -%}
         <label for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}">
           {{ value }}
-          <img class="crossed-out" src="{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
+          <img class="crossed-out" src="{% assign ly_asset = 'soldout-1.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
         </label>
         {%- endif -%}
 
