Sold Out cover image was changed

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6686,14 +6686,14 @@ div#progress_bar_text_sale {
   position:relative;
 }
 /* Image with the cross in it */
-.crossed-out { position:absolute; width:100%; height:100%; left:0; top:0; }
+.crossed-out { position:absolute; width:100%; bottom: 25px;  text-align: center;  font-size: 21px;  font-weight: 600;  color: #818181; }
 .swatch .swatch-element .crossed-out { display:none; }
 .swatch .swatch-element.soldout .crossed-out { display:block; }
 .swatch .swatch-element.soldout label {
   filter: alpha(opacity=60); /* internet explorer */
-  -khtml-opacity: 0.6;      /* khtml, old safari */
-  -moz-opacity: 0.6;       /* mozilla, netscape */
-  opacity: 0.6;           /* fx, safari, opera */
+  -khtml-opacity: 0.2;      /* khtml, old safari */
+  -moz-opacity: 0.2;       /* mozilla, netscape */
+  opacity: 0.2;           /* fx, safari, opera */
 }
 /* Tooltips */
 .swatch .tooltip {
