css issue fixed

--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -96,6 +96,7 @@
       border-radius: 30px;
       display: flex;
       width: fit-content;
+      width: -moz-fit-content;
       margin: 0 auto;
   }
     .bigger-text {
